linuxmuster-linbo-gui7 (7.3.2) lmn73; urgency=medium

  * fix: hdd and cache size in edge cases (#95)

 -- Dorian Zedler <dorian@itsblue.de>  Fri, 04 Oct 2025 13:07:23 +0100

linuxmuster-linbo-gui7 (7.3.1) lmn73; urgency=medium

  * New package for LMN 7.3

 -- Arnaud Kientz <arnaud@linuxmuster.net>  Sat, 03 May 2025 10:23:12 +0200

linuxmuster-linbo-gui7 (7.2.5) lmn72; urgency=medium

  * feat: allow linuxmuster-cachingserver-linbo7 as alternative dependency (#93)

 -- Dorian Zedler <dorian@itsblue.de>  Thu, 04 Jul 2024 17:29:23 +0100

linuxmuster-linbo-gui7 (7.2.4) lmn72; urgency=medium

  * fix: show os icon on errors 
  * fix: focus cancel button on autostart

 -- Dorian Zedler <dorian@itsblue.de>  Sat, 23 Sep 2023 12:44:23 +0100

linuxmuster-linbo-gui7 (7.2.3) lmn72; urgency=low

  * fix: show correct os icon (#90) 
  * feat: skip autostart delay if os button is pressed (#62) 

 -- Dorian Zedler <dorian@itsblue.de>  Sat, 23 Sep 2023 09:33:17 +0100

linuxmuster-linbo-gui7 (7.2.2) lmn72; urgency=low

  * fix: could not load default translation file

 -- Dorian Zedler <dorian@itsblue.de>  Wed, 15 Feb 2023 16:49:22 +0100

linuxmuster-linbo-gui7 (7.2.1) lmn72; urgency=low

  * remove backgroundcolor start.conf option
  * support new theming structure

 -- Dorian Zedler <dorian@itsblue.de>  Thu, 02 Feb 2023 13:17:22 +0100

linuxmuster-linbo-gui7 (7.2.0) lmn72; urgency=low

  * Support differential imaging

 -- Dorian Zedler <dorian@itsblue.de>  Sat, 07 Jan 2023 09:36:22 +0100

linuxmuster-linbo-gui7 (7.1.0) lmn72; urgency=medium

  * Move to Qt6
  * Move to Ubuntu 22.04 as build environment
  * When cancelling an action with the logout flag, the user is now logged out

 -- Dorian Zedler <dorian@itsblue.de>  Fri, 26 Nov 2021 17:36:22 +0100

linuxmuster-linbo-gui7 (7.0.5) lmn71; urgency=medium

  * Fix: GuiDisabled not working

 -- Dorian Zedler <dorian@itsblue.de>  Tue, 12 Apr 2022 17:36:22 +0100

linuxmuster-linbo-gui7 (7.0.4) lmn71; urgency=medium
